--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   shelf: ^1.1.1
   shelf_router: ^1.0.0
   postgres: ^2.4.1
+  shelf_cors_headers: ^0.1.0
 
 dev_dependencies:
   lints: ^1.0.0
